# tradebias

./: .gitignore  Cargo.toml  append_leaderboard.py  benchmark_results.json  compile_error.json  compile_error.txt  errors.txt  fix_braces.rs  refactor.rs  refactor_alpha.py  refactor_lines.rs
.agents/: AGENTS.md
data/: EURUSD_H1.parquet  US500.cash_M5_202407040350_202512081305.parquet  example.parquet  phase1_results.csv  phase2_wfo_results.csv  sample_data.csv  sample_data.parquet
docs/: AGENTS.md  IMPLEMENTATION_STATUS.md  bitwise_engine_architecture.md  build_alpha_additional_settings.md  indicator_master_list.md  indicator_primitives_review.md  metrics_recommendation.md  phase3_wfa_cpcv_architecture.md  quant_robustness_2026.md  robustness_filters.md
docs/audits/: phase1_foundry_audit.md
docs/initial-design-docs/: ai_integration_architecture.md  alpha_target_engineering.md  blueprint_audit.md  core_pipeline_architecture.md  data_ingestion_architecture.md  ga_engine_design.md  greenfield_generation_design.md  holistic_system_design.md  json_ast_schema.md  ui_architecture.md  ui_layout_design.md
docs/phase1_redesign/: bitwise_engine_architecture.md  phase1_pipeline.md
scratch/: refactor.rs  rewrite_alpha.py  test_polars.rs
tb_bench/: Cargo.toml
tb_bench/oracles/: oracle_bear.csv  oracle_bull.csv  oracle_flat.csv  oracle_whipsaw.csv
tb_bench/src/: main.rs  oracle.rs
tb_bitwise/: Cargo.toml
tb_bitwise/src/: archive.rs  ast_gen.rs  data.rs  engine.rs  fitness.rs  ga.rs  lib.rs  metrics.rs  precompute.rs  registry.rs  targets.rs  translator.rs
tb_bitwise/src/robustness/: ablation.rs  mod.rs  monte_carlo.rs  noise.rs  trade_deletion.rs
tb_core/: Cargo.toml
tb_core/src/: archive.rs  ast.rs  ast_compiler.rs  ast_format.rs  ast_simplifier.rs  config.rs  error.rs  fitness.rs  indicators.rs  lib.rs  stops.rs
tb_data/: Cargo.toml
tb_data/src/: error.rs  ingestion.rs  lib.rs
tb_foundry/: Cargo.toml
tb_foundry/src/: archive.rs  engine.rs  error.rs  ga.rs  lib.rs  metrics.rs  pareto.rs  sketches.rs
tb_foundry/src/engines/: continuous.rs  discrete.rs  hybrid.rs  mod.rs
tb_indicators/: Cargo.toml
tb_indicators/src/: lib.rs  templates.rs
tb_math/: Cargo.toml
tb_math/archive/indicators/: adx.rs  alma.rs  atr.rs  bollinger.rs  bollinger_percent_b.rs  chaikin_volatility.rs  choppiness_index.rs  dema.rs  dpo.rs  dss_bressert.rs  ehlers.rs  ema.rs  force_index.rs  gator.rs  heikin_ashi.rs  historical_volatility.rs  hurst_exponent.rs  kalman.rs  kama.rs  keltner.rs  keltner_channel_width.rs  klinger_oscillator.rs  kst.rs  macd.rs  mfi.rs  mod.rs  mvwap.rs  (+20 more)
tb_math/src/: lib.rs  metrics.rs  primitives.rs
tb_math/tests/: audit.py  math_audit.rs
tb_simulator/: Cargo.toml
tb_simulator/src/: engine.rs  error.rs  lib.rs
tb_simulator/src/metrics/: mod.rs  tearsheet.rs
tb_simulator/src/portfolio/: ledger.rs  mod.rs  position.rs
tb_simulator/src/wfo/: mod.rs  window.rs
tb_ui/: Cargo.toml  errors.txt
tb_ui/src/: app.rs  data_parser.rs  export.rs  main.rs  state.rs  theme.rs
tb_ui/src/components/: left_nav.rs  mod.rs  modals.rs
tb_ui/src/node_graph/: compiler.rs  decompiler.rs  interaction.rs  mod.rs  painter.rs  state.rs
tb_ui/src/tabs/: alpha_foundry.rs  alpha_foundry_temp.rs  alpha_foundry_temp2.rs  data_sandbox.rs  forge_parser.rs  foundry_layout.rs  indicator_forge.rs  library.rs  mod.rs  simulator.rs
(+37 files in other folders)
