[workspace]
resolver = "2"
members = ["tb_bench", "tb_bitwise",
    "tb_core",
    "tb_data", "tb_indicators",
    "tb_math",
    "tb_simulator",
    "tb_ui",
]

# Optimize all dependencies even in debug mode.
# This makes `cargo run` (debug) blazing fast without the massive compile times of `--release`
[profile.dev.package."*"]
opt-level = 3
