[package]
name = "tb_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
tb_core = { path = "../tb_core" }
tb_simulator = { path = "../tb_simulator" }
tb_bitwise = { path = "../tb_bitwise" }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tb_math = { version = "0.1.0", path = "../tb_math" }
