[package]
name = "tb_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
polars = { version = "0.41.3", features = ["lazy", "rolling_window", "ewma"] }
tb_math = { version = "0.1.0", path = "../tb_math" }
