[package]
name = "tb_foundry"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.16"
polars = { version = "0.41.3", features = ["cum_agg", "ewma", "lazy", "rolling_window"] }
rand = "0.8"
rayon = "1.12.0"
tb_core = { version = "0.1.0", path = "../tb_core" }
thiserror = "2.0.18"
tracing = "0.1.44"
