[package]
name = "tb_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
crossbeam-channel = "0.5.16"
eframe = "0.33.0"
egui = "0.33.0"
egui-charts = { version = "0.2.0", features = ["ui"] }
egui_plot = "0.34"
egui_extras = { version = "0.33.0", features = ["all_loaders"] }
image = { version = "0.24", features = ["png"] }
polars = { version = "0.41.3", features = ["lazy", "strings"] }
rfd = "0.17.2"
tb_core = { version = "0.1.0", path = "../tb_core" }
tb_data = { version = "0.1.0", path = "../tb_data" }
tb_bitwise = { version = "0.1.0", path = "../tb_bitwise" }
tb_indicators = { version = "0.1.0", path = "../tb_indicators" }
tb_simulator = { version = "0.1.0", path = "../tb_simulator" }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde_json = "1.0"
tb_math = { version = "0.1.0", path = "../tb_math" }
egui-phosphor = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
egui_tiles = "0.14.0"
